<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="@dimen/ask_and_answer_activity_padding"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ask_and_answer_activity_header_layout_height"
        android:orientation="horizontal"
        android:background="@drawable/ask_activity_header_background"
        >

        <ImageView
            android:id="@+id/answer_layout_cancel_action"
            android:layout_width="@dimen/ask_and_answer_activity_cancel_width_height"
            android:layout_height="@dimen/ask_and_answer_activity_cancel_width_height"
            android:src="@drawable/ic_clear_white_24dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/ask_and_answer_activity_cancel_margin_start"
            android:layout_marginEnd="@dimen/ask_and_answer_activity_cancel_margin_end"
            android:scaleType="fitXY"
            android:contentDescription="@string/cancel_image"
            />

        <TextView
            android:id="@+id/question_txt_answer_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/the_question_txt"
            android:layout_weight="1"
            android:textSize="@dimen/ask_and_answer_activity_edit_text_text_size"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            />

        <ImageButton
            android:id="@+id/answer_layout_send_action"
            android:layout_width="@dimen/ask_and_answer_activity_send_width_height"
            android:layout_height="@dimen/ask_and_answer_activity_send_width_height"
            android:src="@drawable/ic_send_black_24dp"
            android:layout_marginStart="@dimen/ask_and_answer_activity_send_margin_start"
            android:layout_marginEnd="@dimen/ask_and_answer_activity_send_margin_end"
            android:layout_gravity="center"
            android:clickable="false"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/send_image"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/answer_editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/answer_question_activity_answer_padding"
        android:gravity="start"
        android:textColor="@color/black"
        android:textSize="@dimen/answer_question_activity_answer_text_size"
        android:hint="@string/what_is_your_answer"
        android:maxLength="300"
        android:background="@color/white"
        android:inputType="text"
        android:importantForAutofill="no" />

</LinearLayout>