<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_answer_card_view"
    android:background="@color/black"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question_txt_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/item_post_padding"
            android:text="@string/post_question"
            android:textColor="@color/questionColor"
            android:textSize="@dimen/item_post_question_answer_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/answer_profile_image"
            android:layout_width="@dimen/user_image_height_width"
            android:layout_height="@dimen/user_image_height_width"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question_txt_answer" />

        <TextView
            android:id="@+id/answer_username_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="@dimen/item_post_padding"
            android:textColor="@color/answerColor"
            android:text="@string/profile_name"
            android:textSize="@dimen/item_post_username"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/answer_profile_image"
            app:layout_constraintTop_toBottomOf="@id/question_txt_answer" />

        <TextView
            android:id="@+id/answer_time_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/time_ago"
            android:textColor="@color/defaultTextColor"
            android:textSize="@dimen/item_post_time_age_text_size"
            app:layout_constraintStart_toStartOf="@id/answer_username_TV"
            app:layout_constraintTop_toBottomOf="@id/answer_username_TV" />

        <TextView
            android:id="@+id/question_answer_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_answer"
            android:textColor="@color/answerColor"
            android:padding="@dimen/item_post_padding"
            android:textSize="@dimen/item_post_question_answer_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/answer_username_TV"
            app:layout_constraintTop_toBottomOf="@id/answer_time_TV"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            />

        <include
            layout="@layout/item_answer_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/question_answer_TV"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>