<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/profile_header_height"
    android:background="@drawable/profile_background1">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/item_profile_header_user_image_height_width"
        android:layout_height="@dimen/item_profile_header_user_image_height_width"
        android:src="@drawable/profile_image"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/item_profile_header_user_image_margin_top"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_profile"
        android:text="@string/profile_name"
        android:layout_gravity="center"
        android:layout_margin="@dimen/item_profile_header_profile_name_margin"
        android:textSize="@dimen/item_profile_header_profile_name_text_size"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/profile_friend_and_favorite_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_profile_header_friend_favorite_layout_height"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="@dimen/item_profile_header_friend_favorite_layout_margin"
        >

        <ImageView
            android:id="@+id/user_accepted_profile"
            android:layout_width="@dimen/item_profile_header_friend_favorite_image_height"
            android:layout_height="@dimen/item_profile_header_friend_favorite_image_height"
            android:src="@drawable/user_accepted"
            android:scaleType="fitXY"
            />
        <ImageView
            android:id="@+id/favorite_image_profile"
            android:layout_width="@dimen/item_profile_header_friend_favorite_image_height"
            android:layout_height="@dimen/item_profile_header_friend_favorite_image_height"
            android:src="@drawable/ic_star_black_24dp"
            android:layout_marginStart="@dimen/item_profile_header_favorite_image_margin_start"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            />
    </LinearLayout>

    <Button
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_profile_header_follow_me_btn_height"
        android:id="@+id/profile_follow_btn"
        android:drawableStart="@drawable/ic_person_add_black_24dp"
        android:drawablePadding="@dimen/item_profile_header_follow_me_btn_padding"
        android:text="@string/follow_me"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:paddingStart="@dimen/item_profile_header_follow_me_btn_padding"
        android:paddingEnd="@dimen/item_profile_header_follow_me_btn_padding"
        android:paddingTop="@dimen/item_profile_header_follow_me_btn_padding_top_bottom"
        android:paddingBottom="@dimen/item_profile_header_follow_me_btn_padding_top_bottom"
        android:layout_margin="@dimen/item_profile_header_follow_me_btn_margin"
        android:background="@drawable/rounded_follow_me_button"
        />

    <LinearLayout
        android:id="@+id/follower_count_and_online_layout"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/item_profile_header_followers_online_height"
        android:layout_gravity="center"
        android:layout_margin="@dimen/item_profile_header_followers_online_margin_top"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/follower_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="@dimen/item_profile_header_followers_online_text_size"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/followers"
            android:textColor="@color/white"
            android:textSize="@dimen/item_profile_header_followers_online_text_size"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="@dimen/item_profile_header_followers_margin_start"
            />
        <TextView
            android:layout_width="@dimen/item_profile_header_space_width"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_margin="@dimen/item_profile_header_space_margin"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/online"
            android:textColor="@color/white"
            android:textSize="@dimen/item_profile_header_followers_online_text_size"
            android:textStyle="bold"
            android:gravity="center"
            />
    </LinearLayout>

    <Button
        android:id="@+id/profile_ask_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_profile_header_ask_btn_height"
        android:background="@drawable/rounded_ask_me_button"
        android:text="@string/ask_me_anything"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:padding="@dimen/item_profile_header_ask_btn_padding"
        android:layout_marginStart="@dimen/item_profile_header_ask_btn_margin_right_left"
        android:layout_marginEnd="@dimen/item_profile_header_ask_btn_margin_right_left"
        android:gravity="center"
        />

</LinearLayout>